tests/NormalTests/paczka1/small_fuzzy/40648921.err
Error in line 1: TWeox3r86c A933 77,4
Error in line 4: A597 S256 84,4
Error in line 5: A597 A16 58,7
Error in line 11: TWeox3r86c S256 1473
Error in line 3: TWeox3r86c S256 32,8
Error in line 14: TWeox3r86c A16 87,4
